manifests/th3-server-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: th3-server-svc
  labels:
    app: th3-server
spec:
  selector:
    app: th3-server
    env: ENV_DEPLOY_COLOR
  ports:
  - name: http
    port: 8080
    nodePort: 30428
    targetPort: 8080
  type: NodePort
